...
    <string name="ui_custom_theme_color">"Custom theme color"</string>
    <string name="ui_hex_color">"HEX color"</string>
    <string name="ui_six_hexadecimal_digits_for_example_3568c0">"Six hexadecimal digits, for example #3568C0"</string>
    <string name="ui_resize_split_view">"Resize split view"</string>
    <string name="ui_your_browsing_history_will_appear_here">"Your browsing history will appear here."</string>
    <string name="ui_search_history">"Search history"</string>
    <string name="ui_page_menu">"Page menu"</string>
    <string name="ui_unpin_from_sidebar">"Unpin from sidebar"</string>
    <string name="ui_pin_to_sidebar">"Pin to sidebar"</string>
    <string name="ui_use_mobile_site">"Use mobile site"</string>
    <string name="ui_use_desktop_site">"Use desktop site"</string>
    <string name="ui_find_in_page">"Find in page"</string>
    <string name="ui_new_split_view">"New split view"</string>
...
