...
        "table-of-contents" to LucideR.drawable.lucide_ic_table_of_contents,
        "table-properties" to LucideR.drawable.lucide_ic_table_properties,
        "table-rows-split" to LucideR.drawable.lucide_ic_table_rows_split,
        "tablet" to LucideR.drawable.lucide_ic_tablet,
        "tablet-smartphone" to LucideR.drawable.lucide_ic_tablet_smartphone,
        "tablets" to LucideR.drawable.lucide_ic_tablets,
        "tag" to LucideR.drawable.lucide_ic_tag,
        "tag-plus" to R.drawable.lucide_extra_tag_plus,
        "tag-x" to R.drawable.lucide_extra_tag_x,
        "tags" to LucideR.drawable.lucide_ic_tags,
        "tally-1" to LucideR.drawable.lucide_ic_tally_1,
        "tally-2" to LucideR.drawable.lucide_ic_tally_2,
        "tally-3" to LucideR.drawable.lucide_ic_tally_3,
...
